gke/development/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: protesto-aquisicao-dev
  labels:
    name: protesto-aquisicao-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pa-api-tubo-sp-dev
  namespace: protesto-aquisicao-dev
spec:
  selector:
    matchLabels:
      app: pa-api-tubo-sp-dev
  replicas: 1
  template:
    metadata:
      labels:
        app: pa-api-tubo-sp-dev
        squad: protesto-aquisicao
        type: api
        value-stream: data
        environment: development
    spec:
      containers:
      - name: pa-api-tubo-sp-dev
        image: gcr.io/bvs-main-98cb/pa-api-tubo-sp-dev
        resources:
          requests:
            memory: "300Mi"
            cpu: "500m"
          limits:
            memory: "500Mi"
            cpu: "700m"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pa-api-tubo-sp-dev
  namespace: protesto-aquisicao-dev
spec:
  ports:
  - name: http    
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: pa-api-tubo-sp-dev
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pa-ingress-interno-tubo-sp-dev
  namespace: protesto-aquisicao-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: iapi-dev-tubosp.bvsnet.com.br
    http:
      paths:
      - path: /
        backend:
          serviceName: pa-api-tubo-sp-dev
          servicePort: 80
  tls:
  - hosts:
    - iapi-dev-tubosp.bvsnet.com.br
    secretName: pa-bvsnet-tls-dev
